rust/tests/snapshots/test_nom_from_file__limbo.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: ~
sense: Minimize
objectives:
  OBJECTIVE_1:
    name: OBJECTIVE_1
    coefficients:
      - name: b_5829890_x2
        value: 1
      - name: b_5880854_x2
        value: 1
constraints:
  CONSTRAINT_2:
    type: Standard
    name: CONSTRAINT_2
    coefficients:
      - name: b_5829890_x2
        value: -2
      - name: b_5829890_x1
        value: 2
    operator: LTE
    rhs: -64
  b_5880854_x2:
    type: Standard
    name: b_5880854_x2
    coefficients:
      - name: b_5880854_x1
        value: -1
    operator: GTE
    rhs: 32
variables:
  b_5829890_x1:
    name: b_5829890_x1
    var_type:
      LowerBound: 10
  b_5829890_x2:
    name: b_5829890_x2
    var_type:
      DoubleBound:
        - 1014
        - 1917
  b_5880854_x1:
    name: b_5880854_x1
    var_type:
      UpperBound: 10
  b_5880854_x2:
    name: b_5880854_x2
    var_type:
      DoubleBound:
        - 1014
        - 1917
