rust/tests/snapshots/test_nom_from_file__milo1.snap
---
source: rust/tests/test_nom_from_file.rs
expression: parsed
---
name: ~
sense: Maximize
objectives:
  obj:
    name: obj
    coefficients:
      - name: x1
        value: 1
      - name: x2
        value: 0.64
constraints:
  c1:
    type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 50
      - name: x2
        value: 31
    operator: LTE
    rhs: 250
  c2:
    type: Standard
    name: c2
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: -2
    operator: GTE
    rhs: -4
variables:
  x1:
    name: x1
    var_type:
      DoubleBound:
        - 0
        - inf
  x2:
    name: x2
    var_type:
      DoubleBound:
        - 0
        - inf
